--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,7 +7,7 @@
 		  <%= render 'users/profile', user: @user %>
 
       <h2>New book</h2>
-      <%= render 'books/newpost', book: @book_new %>
+      <%= render 'books/newpost', book: @book %>
 
 	</div>
 
@@ -16,18 +16,18 @@
       <table class="table">
         <tr>
           <td>
-            <%= link_to user_path(@book.user.id) do %>
-              <%= attachment_image_tag @book.user, :profile_image, :size => '50x50', fallback: "no_image.jpg" %><br>
-              <%= @book.user.name %>
+            <%= link_to user_path(@books.user.id) do %>
+              <%= attachment_image_tag @books.user, :profile_image, :size => '50x50', fallback: "no_image.jpg" %><br>
+              <%= @books.user.name %>
             <% end %>
           </td>
 
-          <td><%= link_to @book.title, @book_new %></td>
-          <td><%= @book.body %></td>
+          <td><%= link_to @books.title, @book_new %></td>
+          <td><%= @books.body %></td>
 
-          <% if @book.user_id == current_user.id %>
-            <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn-sm btn-success" %></td>
-            <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn-sm btn-danger" %></td>
+          <% if @books.user_id == current_user.id %>
+            <td><%= link_to "Edit", edit_book_path(@books.id), class: "btn-sm btn-success" %></td>
+            <td><%= link_to "Destroy", book_path(@books.id), method: :delete, "data-confirm" => "本当に消しますか？", class: "btn-sm btn-danger" %></td>
           <% end %>
         </tr>
       </table>
