--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,3 +60,23 @@ span {
     background-color: #5cb85c;
     border-color: #4cae4c;
 }
+//js対応テスト
+.test1 {
+background-image: url(test1.jpg);
+}
+.test2 {
+background-image: url(test2.jpg);
+}
+.test3 {
+background-image: url(test3.jpg);
+}
+.test4 {
+background-image: url(test4.jpg);
+}
+.test5 {
+background-image: url(test5.jpg);
+}
+
+#container{
+  height: 500px;
+}
