--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,3 +50,15 @@
     </footer>
   </body>
 </html>
+
+
+<!-- js対応テスト -->
+<div id="container">
+	<div id="theTarget">
+		<div class="test1"></div>
+		<div class="test2"></div>
+		<div class="test3"></div>
+		<div class="test4"></div>
+		<div class="test5"></div>
+	</div>
+</div>
